[WK2] Anchor elements doesn't get focus on TAB key press. https://bugs.webkit.org/show_bug.cgi?id=66949

Patch by Ravi Phaneendra Kasibhatla <ravi.kasibhatla@motorola.com> on 2011-09-02
Reviewed by Adam Roben.

Setting the default property value of TabsToLinks to true
only for GTK platform since Win & Mac platforms doesn't want
it to be set to true by default.

* Shared/WebPreferencesStore.h:
Set the default value of key TabsToLinks to true for GTK platform only.

Canonical link: https://commits.webkit.org/83326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94417 268f45cc-cd09-0410-ab3c-d52691b4dbfc